--- a/3.html
+++ b/3.html
@@ -3,6 +3,15 @@
 <head>
 <title>WEB1 - html</title>
 <meta charset="utf-8">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1MS7G3JP0Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1MS7G3JP0Q');
+</script>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
